fixing(?) padding on mobile

--- a/site.css
+++ b/site.css
@@ -23,7 +23,7 @@ body{
 }
 
 section{
-    padding: 20vh 10vh;
+    padding: 30vh 10vh;
     justify-content: center;
     position: relative;
 }
